Optimize `List.copyOf()` and `Map.copyOf` usage with unmodifiable collections wrappers